@@ -30,9 +30,7 @@ Drone Carrier,SRD_drone_carrier,,,,Fighters,,,TRUE,,0,0,0,0,data.scripts.hullmod
 The ship %s. However, its automated systems are far superior to comparable crewed alternatives: all fighters mounted on the ship has their refit time reduced by %s, while the ship's replacement rate degrades %s slower and recovers %s faster.
 
 Incompatible with %s.",Better carrier performance. Cannot mount crewed fighters,graphics/sylphon/hullmods/SRD_drone_carrier.png
-Super-Heavy Mountpoints,SRD_superheavy_weapons_frelia,,,,,,,TRUE,,0,0,0,0,data.scripts.hullmods.SRD_SuperweaponBayConversion,"The Frelia is equipped with a pair of refit-able %s. These mounts cannot mount normal weapons, but they can mount super-heavy weapons that other ships cannot, including the fearsome %s cannon.
-
-Slots are also designed to be easily converted into additional launch bays for the ship; the ship gains %s for each of these slots left empty.",Super-large mounts,graphics/sylphon/hullmods/harmonius_hullmod.png
+Hyper-Adaptable Mountpoints,SRD_superheavy_weapons_frelia,,,,,,,TRUE,,0,0,0,0,data.scripts.hullmods.SRD_SuperweaponBayConversion,"The Frelia is equipped with a pair of specialized slots that are designed to be easily converted into additional launch bays for the ship; the ship gains %s for each of its Large slots left empty. In addition, all energy weapon cost %s to mount in these slots.",Mounts can be turned to fighter bays,graphics/sylphon/hullmods/harmonius_hullmod.png
 ,,,,,,,,,,,,,,,,,
 Sylph Core,SRD_sylph_core,,,,,,,TRUE,,0,0,0,0,data.scripts.hullmods.SRD_SylphCore,"This ship has had a voluntary AI-core integrated into the mainframe by the Sylphon. While upkeep is increased by %s to keep the core operating under peak conditions, the ship %s. The ship's crew capacity is however reduced by %s due to installation requirements.%s",Automated ship,graphics/sylphon/hullmods/SRD_sylph_core.png
 ,,,,,,,,,,,,,,,,,
